--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,8 +2,8 @@ spring:
   application:
     name: test
   redis:
-    host: localhost
-    port: 6379
-    database: 1
+    host: redis-18218.c265.us-east-1-2.ec2.cloud.redislabs.com
+    port: 18218
+    database: 0
 server:
   port: 6006
